--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,11 @@
 			<url>https://github.com/matthieu-vergne</url>
 		</developer>
 	</developers>
-	
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
 	<build>
 		<plugins>
 			<plugin>
