--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>fr.matthieu-vergne</groupId>
 	<artifactId>ioutils</artifactId>
@@ -8,7 +9,7 @@
 	<description>Several IO implementations, as provided by Apache Commons libraries.</description>
 	<inceptionYear>2015</inceptionYear>
 	<url>https://github.com/matthieu-vergne/IOUtils</url>
-	
+
 	<modules>
 		<module>ioutils-core</module>
 		<module>ioutils-samples</module>
@@ -19,12 +20,12 @@
 		<developerConnection>scm:git:https://matthieu-vergne@github.com/matthieu-vergne/IOUtils.git</developerConnection>
 		<url>scm:git:git://github.com/matthieu-vergne/IOUtils.git</url>
 	</scm>
-	
+
 	<issueManagement>
 		<system>GitHub</system>
 		<url>https://github.com/matthieu-vergne/IOUtils/issues/</url>
 	</issueManagement>
-	
+
 	<licenses>
 		<license>
 			<name>CC0</name>
@@ -32,7 +33,7 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
-	
+
 	<developers>
 		<developer>
 			<name>Matthieu Vergne</name>
@@ -109,7 +110,7 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 	<distributionManagement>
 		<snapshotRepository>
 			<id>sonatype-snapshot</id>
