--- a/ioutils-core/pom.xml
+++ b/ioutils-core/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>fr.matthieu-vergne</groupId>
 		<artifactId>ioutils</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.0</version>
 	</parent>
 
 	<artifactId>ioutils-core</artifactId>
