--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>fr.matthieu-vergne</groupId>
 	<artifactId>ioutils</artifactId>
-	<version>1.0</version>
+	<version>1.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>IO Utilities</name>
 	<description>Several IO implementations, as provided by Apache Commons libraries.</description>
@@ -18,7 +18,7 @@
 		<connection>scm:git:https://matthieu-vergne@github.com/matthieu-vergne/IOUtils.git</connection>
 		<developerConnection>scm:git:https://matthieu-vergne@github.com/matthieu-vergne/IOUtils.git</developerConnection>
 		<url>scm:git:git://github.com/matthieu-vergne/IOUtils.git</url>
-	  <tag>ioutils-1.0</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<issueManagement>
